--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.scss
@@ -1,6 +1,7 @@
-// .user-settings-wrapper{
-//   padding-bottom: 100px;
-// }
+.user-settings-wrapper{
+  height: 100%;
+  overflow: auto;
+}
 h1{
   font-style: normal;
   font-weight: bold;
