--- a/src/app/user-page/user-page.component.scss
+++ b/src/app/user-page/user-page.component.scss
@@ -1,8 +1,9 @@
 .wrapper {
   max-width: 1045px;
   margin: 0 auto;
+  font-family: Source Sans Pro;
 }
-.nav-wrapper{
+.nav-wrapper {
   width: 100%;
   position: relative;
   height: 50px;
@@ -43,6 +44,56 @@
       // font-weight: 600;
       // font-size: 16px;
       color: #3c7eea;
+    }
+  }
+}
+
+.content {
+  padding-top: 50px;
+}
+.back-to-list {
+  padding-top: 25px;
+  a {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #323c47;
+    text-decoration: none;
+    cursor: pointer;
+    padding-left: 20px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 53%;
+      left: 0;
+      transform: translateY(-50%);
+      height: 10px;
+      width: 8px;
+      background-image: url(/assets/images/svg/user/arrow-left-black.svg);
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.general-information {
+  &__avatar {
+    width: 107px;
+    height: 107px;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    margin-right: 20px;
+    img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: auto;
+      height: 130%;
+      border-radius: 50%;
     }
   }
 }
