--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
@@ -1,9 +1,9 @@
 .wrap {
   position: relative;
   position: relative;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 h3 {
   font-family: "Source Sans Pro", sans-serif;
@@ -35,7 +35,7 @@ section:not(.wrap) {
     padding: 0;
     margin: 0 15px;
     list-style: none;
-    border-bottom: 1px solid #EBEFF2;
+    border-bottom: 1px solid #ebeff2;
     li {
       display: inline-block;
       font-family: Source Sans Pro;
@@ -51,23 +51,22 @@ section:not(.wrap) {
       &:before {
         width: 0;
         -webkit-transition: all 0.35s ease;
-          transition: all 0.35s ease;
+        transition: all 0.35s ease;
       }
       &.active {
-        color: #3C7EEA;
+        color: #3c7eea;
         &:before {
           position: absolute;
-          content: '';
+          content: "";
           width: 100%;
           height: 4px;
-          background: #3C7EEA;
+          background: #3c7eea;
           border-radius: 4px 4px 0px 0px;
           bottom: 0;
           left: 0;
         }
       }
     }
-
   }
 }
 
@@ -270,19 +269,18 @@ section:not(.wrap) {
   }
 }
 
-
 mat-tab-group ::ng-deep {
   width: 100%;
   height: 100%;
+  font-family: Source Sans Pro, sans-serif !important;
   .mat-tab-body-content {
     display: flex;
     flex-wrap: wrap;
   }
-  .mat-ink-bar{
-    background: #3C7EEA !important;
+  .mat-ink-bar {
+    background: #3c7eea !important;
     border-radius: 100px 100px 0px 0px;
     height: 4px;
-
   }
   .mat-tab-header {
     margin: 0 15px;
@@ -296,4 +294,25 @@ mat-tab-group ::ng-deep {
   .mat-tab-body-content {
     padding-right: 10px;
   }
+  .mat-tab-label .mat-tab-label-content {
+    font-family: Source Sans Pro, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    /* identical to box height */
+
+    color: #707683;
+
+  }
+  .mat-tab-label-active {
+    .mat-tab-label-content {
+      color: #3C7EEA;
+      font-weight: 600;
+    }
+  }
+  .mat-tab-label{
+    opacity: 1;
+  }
+
 }
