--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -150,6 +150,9 @@
         </div>
       </div>
     </div>
+    <div class="user-services">
+      <div class="section-title">Услуги фрилансера</div>
 
+    </div>
   </div>
 </div>
