--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
@@ -74,6 +74,8 @@
       font-size: 16px;
       line-height: 20px;
       padding-bottom: 3px;
+      text-decoration: none;
+      color: #323c47;
       &:hover{
         text-decoration: underline;
         cursor: pointer;
