--- a/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.html
+++ b/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.html
@@ -5,7 +5,7 @@
   <div class="top-section">
     <div class="photo">
       <div class="offer-avatar">
-        <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + offerData.user.avatar" alt="user avatar">
+        <img [src]="offerData.user.avatar" alt="user avatar">
       </div>
     </div>
     <div class="offer-info">
