--- a/src/app/service-page/components/service-page-earlier-viewed/service-page-earlier-viewed.component.html
+++ b/src/app/service-page/components/service-page-earlier-viewed/service-page-earlier-viewed.component.html
@@ -11,7 +11,7 @@
         <div class="card-description">
 
           <div class="card-description__top">
-            <div class="card-description__ava" (click)="openOffer(offer.id)"><img *ngIf="offer.user.avatar" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offer.user.avatar" alt="avatar"></div>
+            <div class="card-description__ava" (click)="openOffer(offer.id)"><img *ngIf="offer.user.avatar" [src]="offer.user.avatar" alt="avatar"></div>
             <div>
               <span class="card-description__name" >{{offer.user.name}} {{offer.user.surname}}</span>
               <div class="card-description__skill">{{offer.user.rank_id}}</div>
