--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -109,7 +109,6 @@
     line-height: 30px;
     color: #323c47;
     margin: 0;
-
     margin-bottom: 25px;
   }
 }
@@ -150,6 +149,10 @@
     font-size: 18px;
     line-height: 18px;
     color: #323c47;
+    text-decoration: none;
+    &:hover{
+      text-decoration: underline;
+    }
   }
   &-raiting {
     &-wrapp {
