--- a/src/app/user-page/user-page.component.scss
+++ b/src/app/user-page/user-page.component.scss
@@ -66,7 +66,7 @@
   max-width: 1045px;
   margin: 0 auto;
   background-color: #fff;
-  padding: 50px 30px 0;
+  padding: 50px 30px 100px;
 }
 
 .back-to-list {
@@ -164,8 +164,7 @@
       }
     }
   }
-  &__lvl {
-  }
+  // &__lvl {}
   &__available {
     font-size: 14px;
     line-height: 18px;
@@ -181,8 +180,7 @@
   &__inProces {
     margin-top: 16px;
   }
-  &__awaiting {
-  }
+  // &__awaiting {}
   &__actions {
     display: flex;
     .action {
@@ -350,6 +348,7 @@
     }
   }
   &__name {
+    margin-right: 3px;
   }
   &__lvl {
     font-weight: normal;
@@ -394,13 +393,15 @@
 }
 
 .raiting {
-  &__wrapper{
+  margin-bottom: 30px;
+  border-bottom: 1px solid #f1f2f4;
+  &__wrapper {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
     width: 410px;
   }
-  &__info-block{
+  &__info-block {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -414,16 +415,164 @@
       border-bottom: 1px solid #f1f2f4;
     }
   }
-  &__name{
+  &__name {
     width: 220px;
     margin-right: 20px;
 
     font-weight: 600;
     color: #707683;
   }
-  &__commnets{
+  &__commnets {
     font-weight: normal;
-    color: #99ACB7;
+    color: #99acb7;
     line-height: 20px;
+  }
+}
+
+.user-services {
+  .cards-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin: 24px -30px;
+  }
+  .card {
+    width: calc(20% - 60px);
+    margin: 0 30px 15px;
+    box-sizing: border-box;
+    font-family: "Source Sans Pro", sans-serif;
+    color: #323c47;
+
+    box-shadow: 0px 0px 4px rgba(199, 213, 255, 0.55);
+    border-radius: 3px;
+    background-color: #fff;
+    &-preview {
+      &__bg {
+        height: 155px;
+        box-shadow: 0px 0px 4px rgba(199, 213, 255, 0.55);
+        border-radius: 3px;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        img {
+          width: 100%;
+          height: auto;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+      }
+    }
+    &-description {
+      width: 100%;
+      padding: 12px 11px;
+      box-sizing: border-box;
+      height: 100px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      &__top {
+        display: flex;
+        align-items: center;
+        img {
+          height: 40px;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      &__about {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+        color: #323c47;
+
+        max-height: 41px;
+        overflow: hidden;
+        margin: 0;
+        cursor: pointer;
+        &:hover {
+          text-transform: underline;
+        }
+      }
+      &__skill {
+        font-size: 16px;
+        line-height: 20px;
+      }
+      &__bottom {
+        margin-top: auto;
+        display: flex;
+      }
+      &__level {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 20px;
+        padding-left: 28px;
+        position: relative;
+        &::before {
+          content: "";
+          position: absolute;
+          width: 20px;
+          height: 20px;
+          top: 50%;
+          left: 0;
+          transform: translateY(-58%);
+
+          height: 20px;
+          width: 20px;
+          background-image: url(/assets/images/icons/Star.png);
+          background-repeat: no-repeat;
+          background-size: contain;
+          background-position: center;
+        }
+      }
+      &__comments {
+        font-size: 16px;
+        line-height: 20px;
+        color: #99acb7;
+        margin-left: 14px;
+        cursor: pointer;
+      }
+    }
+    &-bottom {
+      border: 1px solid #f4f7fc;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 11px;
+      &__like {
+        width: 20px;
+        height: 18px;
+        background-image: url(/assets/images/icons/not_liked.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        cursor: pointer;
+        &.liked {
+          background-image: url(/assets/images/icons/liked.png);
+        }
+      }
+      &__price {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+        span {
+          font-weight: bold;
+          font-size: 16px;
+          line-height: 20px;
+          padding-left: 13px;
+          position: relative;
+          &::before {
+            content: "$";
+            position: absolute;
+            left: 4px;
+            top: 50%;
+            transform: translateY(-50%);
+          }
+        }
+      }
+    }
   }
 }
