--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -44,8 +44,8 @@
             <img src="assets/images/svg/service-page/shape-hov.svg" alt="" class="hover-img">
           </a>
         </div> -->
-        <div class="action tooltip" data-title="Написать сообщение">
-          <a href="">
+        <div class="action tooltip" data-title="Написать сообщение" (click)="openChat(userData.id)">
+          <a >
             <img src="assets/images/svg/service-page/envelope.svg" alt="" class="default-img">
             <img src="assets/images/svg/service-page/envelope-hov.svg" alt="" class="hover-img">
           </a>
