--- a/src/app/chat/components/collocutors-list/collocutors-list.component.scss
+++ b/src/app/chat/components/collocutors-list/collocutors-list.component.scss
@@ -128,14 +128,14 @@
       font-weight: 600;
       font-size: 16px;
       line-height: 20px;
-      color: #323C47;
+      color: #707683;
     }
     .collocutor-message {
       font-style: normal;
       font-weight: normal;
       font-size: 14px;
       line-height: 18px;
-      color: #323C47;
+      color: #707683;
       overflow: hidden;
       display: -webkit-box;
       -webkit-line-clamp: 2;
