--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
@@ -153,4 +153,10 @@
     </div>
 
   </form>
+
+  <!-- <div class="filter-chips">
+    <div class="filter-chips-val" *ngFor='let filter of catalogFilters'>
+      {{filter}}
+    </div>
+  </div> -->
 </div>
