--- a/src/app/user-page/user-page-comments/user-page-comments.component.html
+++ b/src/app/user-page/user-page-comments/user-page-comments.component.html
@@ -1,1 +1,11 @@
-<p>user-page-comments works!</p>
+<section class="comments">
+  <div class="tabs">
+
+  </div>
+  <div class="tabContent">
+
+  </div>
+  <div class="tabContent">
+
+  </div>
+</section>
