--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
@@ -282,3 +282,55 @@
     }
   }
 }
+
+.filter-chips{
+  margin: 30px 0 40px;
+  &-list{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &-val{
+    position: relative;
+    background: #ECF3FF;
+    border-radius: 3px;
+    padding: 7px 36px 7px 13px;
+    margin-right: 23px;
+
+    font-family: Source Sans Pro;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    color: #4C88EA;
+    cursor: default;
+    .close {
+      position: absolute;
+      right: 8px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 8px;
+      height: 8px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      outline: none;
+      }
+      .close:hover {
+      opacity: 1;
+      }
+      .close:before, .close:after {
+        position: absolute;
+        left: 0;
+        top: -1px;
+        content: " ";
+        height: 11px;
+        width: 2px;
+        background-color: #5A91EA;
+      }
+      .close:before {
+      transform: rotate(45deg);
+      }
+      .close:after {
+      transform: rotate(-45deg);
+    }
+  }
+}
