--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
@@ -1,12 +1,22 @@
 .wrapper{
   margin: 0 -30px;
 }
+.total-result{
+  margin-left: 30px;
+  &__text{
+    font-family: Source Sans Pro;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+     color: #707683;
+  }
+}
 .cards-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   margin-left: 30px;
-  margin-top: 60px;
+  margin-top: 20px;
 }
 .card {
   width: calc(25% - 30px);
