--- a/src/app/catalog-page/catalog/catalog-pagination/catalog-pagination.component.html
+++ b/src/app/catalog-page/catalog/catalog-pagination/catalog-pagination.component.html
@@ -1,26 +1,33 @@
 <div class="pagination-wrapper" *ngIf='offersList'>
 
-  <ul  class="pagination" *ngIf='offersList.page.total > 1'>
-    <li [ngClass]="{disabled:offersList.page.current_page === 1}" class="page-item previous-item">
+  <ul class="pagination" *ngIf='offersList.last_page > 1'>
+    <li [ngClass]="{disabled:offersList.current_page === 1}" class="page-item previous-item">
       <!-- <a [routerLink] [queryParams]="{ current_page: catalogFilters.current_page - 1 }" class="page-link"><</a> -->
       <a (click)="onPrevPage()" class="page-link"><img src="assets/images/svg/catalog-page/arrow-white.svg" alt=""></a>
     </li>
-    <li [ngClass]="{active:offersList.page.current_page === 1}" class="page-item first-item">
+    <li [ngClass]="{active:offersList.current_page === 1}" class="page-item first-item">
       <a (click)="onPage(1)" class="page-link">1</a>
     </li>
 
-    <div class="hidden-pages page-item" [ngClass]="{'hidden': offersList.page.current_page === 1 || offersList.page.current_page === 2 || offersList.page.current_page === 3}">...</div>
+    <ng-container *ngIf='offersList.last_page > 2'>
+      <div class="hidden-pages page-item"
+        [ngClass]="{'hidden': offersList.current_page === 1 || offersList.current_page === 2 || offersList.current_page === 3  || offersList.last_page <= 5}">...</div>
 
-    <li *ngFor="let page of pagesArr" [ngClass]="{active:offersList.page.current_page === page}" class="page-item number-item">
-      <a (click)="onPage(page)" class="page-link">{{page}}</a>
+      <li *ngFor="let page of pagesArr" [ngClass]="{active:offersList.current_page === page}"
+        class="page-item number-item">
+        <a (click)="onPage(page)" class="page-link">{{page}}</a>
+      </li>
+
+      <div class="hidden-pages page-item"
+        [ngClass]="{hidden: offersList.current_page === offersList.last_page || offersList.current_page === offersList.last_page - 1 || offersList.current_page === offersList.last_page - 2 || offersList.last_page <= 5}">
+        ...</div>
+
+    </ng-container>
+
+    <li [ngClass]="{ active:offersList.last_page === catalogFilters.page}" class="page-item last-item">
+      <a (click)="onPage(offersList.last_page)" class="page-link">{{offersList.last_page}}</a>
     </li>
-
-    <div class="hidden-pages page-item" [ngClass]="{hidden:offersList.page.current_page === offersList.page.last_page || offersList.page.current_page === offersList.page.last_page - 1 || offersList.page.current_page === offersList.page.last_page - 2}" >...</div>
-
-    <li [ngClass]="{ active:offersList.page.last_page === catalogFilters.page}" class="page-item last-item">
-      <a (click)="onPage(offersList.page.last_page)" class="page-link">{{offersList.page.last_page}}</a>
-    </li>
-    <li [ngClass]="{disabled:offersList.page.current_page === offersList.page.last_page}" class="page-item next-item">
+    <li [ngClass]="{disabled:offersList.current_page === offersList.last_page}" class="page-item next-item">
       <a (click)="onNextPage()" class="page-link"><img src="assets/images/svg/catalog-page/arrow-white.svg" alt=""></a>
       <!-- <a routerLink [queryParams]="{ page: catalogFilters.currentPage + 1 }" class="page-link">></a> -->
     </li>
