--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.html
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.html
@@ -6,7 +6,7 @@
   <div class="cards-list">
     <div class="card" *ngFor="let offer of offersList.data">
       <div class="card-preview__bg">
-        <img class="card-preview" (click)="openOffer(offer.id)" src="/assets/images/preview.png" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offer.mainImage">
+        <img class="card-preview" (click)="openOffer(offer.id)" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offer.mainImage">
       </div>
       <div class="card-description">
 
